--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,11 @@
 cmake_minimum_required(VERSION 3.2.0)
+
+include("cmake/HunterGate.cmake")
+HunterGate(
+    URL "https://github.com/ruslo/hunter/archive/v0.23.98.tar.gz"
+    SHA1 "bf539cb70375ac319e386ae2ec5b5a0c4923480a"
+)
+
 project(OpenNMTTokenizer)
 
 option(WITH_ICU "Compile with ICU" OFF)
