Use Hunter to download 'sentencepiece'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,8 +73,17 @@ else()
   list(APPEND SOURCES src/unicode/Data.cc)
 endif()
 
+if(HUNTER_ENABLED)
+  hunter_add_package(sentencepiece)
+  find_package(sentencepiece CONFIG REQUIRED)
+  set(SP_LIBRARY sentencepiece::sentencepiece)
+  set(SP_INCLUDE_DIR "${SENTENCEPIECE_ROOT}/include")
+else()
+
 find_library(SP_LIBRARY NAMES sentencepiece)
 find_path(SP_INCLUDE_DIR NAMES sentencepiece_processor.h)
+
+endif()
 
 if(NOT SP_LIBRARY OR NOT SP_INCLUDE_DIR)
   message(WARNING "sentencepiece not found; will not be supported")
@@ -86,7 +95,11 @@ else()
   list(APPEND INCLUDE_DIRECTORIES ${SP_INCLUDE_DIR})
   list(APPEND LINK_LIBRARIES ${SP_LIBRARY})
 
+  if(HUNTER_ENABLED)
+    set(SP_TRAIN_LIBRARY sentencepiece::sentencepiece_train)
+  else()
   find_library(SP_TRAIN_LIBRARY NAMES sentencepiece_train)
+  endif()
   if(SP_TRAIN_LIBRARY)
     add_definitions(-DWITH_SP_TRAIN)
     message(STATUS "Found sentencepiece_train: ${SP_TRAIN_LIBRARY}")
