--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -4,5 +4,7 @@ if(@WITH_ICU@)
   find_package(ICU CONFIG REQUIRED)
 endif()
 
+find_package(sentencepiece CONFIG REQUIRED)
+
 include("${CMAKE_CURRENT_LIST_DIR}/@targets_export_name@.cmake")
 check_required_components("@PROJECT_NAME@")
